# PingOpenCL

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
pingopencl/: build.gradle  proguard-rules.pro
pingopencl/src/androidTest/java/org/oedteq/pingopencl/: ExampleInstrumentedTest.java  LoadOpenCLTest.java
pingopencl/src/main/: AndroidManifest.xml
pingopencl/src/main/cpp/: CMakeLists.txt  pingopencl-jni.c
pingopencl/src/main/java/org/oedteq/pingopencl/: PingOpenCL.java
pingopencl/src/main/res/layout/: activity_main.xml
pingopencl/src/main/res/values/: strings.xml
pingopencl/src/test/java/org/oedteq/pingopencl/: ExampleUnitTest.java
